# openrouter-search-workflow

./: .gitignore  .pylintrc  Makefile  README.md  download_icon.py  info.plist  main.py  pyproject.toml
.github/workflows/: check.yml  release.yml
workflow/: alfred.py  api.py  cache.py  commands.py  config.py  icons.py  utils.py
